--- a/.gitignore
+++ b/.gitignore
@@ -1,7 +1,5 @@
 Database\DonchianBot_DB.sqlite
-__pycache__
-Strategies\__pycache__
-Database\__pycache__
-Solvings\__pycache__
-Strategies\__pycache__
-Indicators\__pycache__
+*.env
+**__pycache__
+payment.py
+
